# prediction_profils_accidents_graves

./: .gitignore  02_data_exploration_analyses_complementaires.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  clone-and-install  pyproject.toml
data/: dataset_features.parquet
data/final/: dataset_features.parquet
docs/: dictionnaire_des_variables.csv
notebooks/: 00_create_dataset.ipynb  01_cleaning_notebook.ipynb  02_data_exploration.ipynb  02_data_exploration_analyses_complementaires.ipynb  03_features_engineering.ipynb  04_training_model.ipynb  cleaning_notebook.ipynb  data_exploration.ipynb
src/prediction_profils_accidents_graves/: create_dataset.py
tests/: test_create_dataset.py  test_main.py
